fixed html and body overflow & added more mobile styling

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cinzel:400,700,900&display=swap');
 
 .contact-page-section {
-    padding: 0;
+
     background-color: #072030;
     color: #ffffff;
     display: flex;
@@ -13,7 +13,7 @@
         line-height: 75px;
         font-size: 30px;
         height: 100%;
-        padding: 50px 0 0 0;
+        padding: 150px 0 0 0;
         z-index: 3;
 
         .established {
@@ -51,7 +51,7 @@
                 .contact-page-text {
                     font-size: 20px;
                     padding: 0 0 0 30px;
-                    margin: -12px 0 0 0;
+                    margin: 12px 0 0 0;
                     text-align: left;
                 }
             }
@@ -121,8 +121,9 @@
                     .contact-page-text {
                         font-size: 15px;
                         padding: 0 0 0 10px;
-                        margin: -12px 0 0 0;
+                        margin: 12px 0 0 0;
                         text-align: left;
+                        line-height: 30px;
                     }
                 }
             }
