--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -49,7 +49,7 @@ footer {
             letter-spacing: 2px;
             padding: 0;
             margin: 0;
-            width: 5em;
+            width: 25%;
             height: 100%;
         }
     }
