--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,18 @@ body {
 	text-align: center;
 	height: 100%;
 	width: 100%;
-	// overflow-x: hidden; 
+	overflow-x: hidden; 
+	// overflow: hidden;
+
+}
+
+html {
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden; 
+	// overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
